<resources>
    <string name="app_name">VolleyballReferee</string>
    <string name="title_referees">Судьи</string>
    <string name="title_teams">Команды</string>
    <string name="hint">Введите…</string>
    <string name="team_city_label">Город</string>
    <string name="team_name_label">Название команды</string>
    <string name="team_home_arena_label">Домашняя арена</string>
    <string name="add_team_btn_text">Добавить</string>
    <string name="referee_full_name_label">Полное имя</string>
    <string name="referee_category_label">Категория</string>
    <string name="edit_team_btn_text">Сохранить изменения</string>
    <string name="title_players">Игроки</string>
    <string name="player_team_label">Команда</string>
    <string name="player_role_label">Амплуа</string>
    <string name="title_match">Матч</string>
    <string name="start_match_btn_text">Начать матч</string>
    <string name="first_team_label">Команда А</string>
    <string name="second_team_label">Команда Б</string>
    <string name="referee_label">Судья</string>
    <string name="location_label">Место проведения</string>
    <string name="date_label">Дата проведения</string>
    <string name="start_time_label">Время начала</string>
    <string name="first_team_btn_text">Команда А набрала очко</string>
    <string name="second_team_btn_text">Команда Б набрала очко</string>
    <string name="game_event_label">Игровое событие</string>
    <string name="add_game_event_btn_text">Добавить событие</string>
    <string name="title_matches">История</string>
    <string name="end_time_label">Время окончания</string>
    <string name="winner_label">Победитель</string>
    <string name="game_events_label">Игровые события матча</string>
    <string name="result_label">Результат</string>
    <string name="add_referees_btn_text">Добавить нового судью</string>
    <string name="add_players_btn_text">Добавить нового игрока</string>
    <string name="add_teams_btn_text">Добавить новую команду</string>
    <string name="number_of_games_label">Количество игр</string>
    <string name="number_of_winning_games_label">Количество побед</string>
</resources>