<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/first_team_label"
            android:textSize="18sp"
            android:textStyle="italic" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/first_team_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/second_team_label"
            android:textSize="18sp"
            android:textStyle="italic" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/second_team_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/location_label"
            android:textSize="18sp"
            android:textStyle="italic" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/location_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            tools:text="Чуванов Марк Юрьевич" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/referee_label"
            android:textSize="18sp"
            android:textStyle="italic" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/referee_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/date_label"
            android:textSize="18sp"
            android:textStyle="italic" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/date_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/start_time_label"
            android:textSize="18sp"
            android:textStyle="italic" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/start_time_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/end_time_label"
            android:textSize="18sp"
            android:textStyle="italic" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/end_time_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/winner_label"
            android:textSize="18sp"
            android:textStyle="italic" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/winner_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/result_label"
            android:textSize="18sp"
            android:textStyle="italic" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/result_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/game_events_label"
            android:textSize="18sp"
            android:textStyle="italic" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/game_events_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>