<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/first_team_label"
            android:textSize="18sp"
            android:textStyle="italic" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/first_team_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/second_team_label"
            android:textSize="18sp"
            android:textStyle="italic" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/second_team_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/location_label"
            android:textSize="18sp"
            android:textStyle="italic" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/location_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint"
            tools:text="Чуванов Марк Юрьевич" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/referee_label"
            android:textSize="18sp"
            android:textStyle="italic" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/referee_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/start_match_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_primary"
        android:text="@string/start_match_btn_text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>