<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="16dp"
            android:text="@string/team_name_label"
            android:textSize="18sp"
            android:textStyle="italic" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/team_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint"
            tools:text="Муром" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="21dp"
            android:text="@string/team_city_label"
            android:textSize="18sp"
            android:textStyle="italic" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/team_city_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint"
            tools:text="Муром" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="21dp"
            android:text="@string/team_home_arena_label"
            android:textSize="18sp"
            android:textStyle="italic" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/team_home_arena_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint"
            tools:text="Дворец спорта 'Ока'" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="21dp"
            android:text="@string/number_of_games_label"
            android:textSize="18sp"
            android:textStyle="italic" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/number_of_games_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            tools:text="Муром" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="21dp"
            android:text="@string/number_of_winning_games_label"
            android:textSize="18sp"
            android:textStyle="italic" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/number_of_winning_games_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            tools:text="Муром" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/edit_team_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_primary"
        android:text="@string/edit_team_btn_text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>