<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/first_team_label"
            android:textSize="18sp"
            android:textStyle="italic" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/first_team_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/first_team_btn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@color/design_default_color_primary"
            android:padding="2dp"
            android:paddingTop="16dp"
            android:text="@string/first_team_btn_text"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/second_team_label"
            android:textSize="18sp"
            android:textStyle="italic" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/second_team_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/second_team_btn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@color/design_default_color_primary"
            android:padding="2dp"
            android:paddingTop="16dp"
            android:text="@string/second_team_btn_text"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/game_event_label"
            android:textSize="18sp"
            android:textStyle="italic" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/game_events_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_game_event_btn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@color/design_default_color_primary"
            android:padding="2dp"
            android:paddingTop="16dp"
            android:text="@string/add_game_event_btn_text"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/match_result_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="40sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/result_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="25sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>
