<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="5dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="16dp"
                android:text="@string/referee_full_name_label"
                android:textSize="18sp"
                android:textStyle="italic" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/referee_full_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint"
                tools:text="Чуванов Марк Юрьевич" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="16dp"
                android:text="@string/team_city_label"
                android:textSize="18sp"
                android:textStyle="italic" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/team_city_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint"
                tools:text="Муром" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="16dp"
                android:text="@string/number_of_games_label"
                android:textSize="18sp"
                android:textStyle="italic" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/number_of_games_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                tools:text="Муром" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="16dp"
                android:text="@string/referee_category_label"
                android:textSize="18sp"
                android:textStyle="italic" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/referee_category_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp" />


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/load_photo_iv"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                app:srcCompat="@android:drawable/ic_menu_camera" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/edit_referee_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_primary"
        android:text="@string/edit_team_btn_text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>