<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_match">

    <fragment
        android:id="@+id/navigation_teams"
        android:name="ru.mivlgu.pin.volleyballreferee.ui.menu.TeamsFragment"
        android:label="@string/title_teams"
        tools:layout="@layout/fragment_teams">
        <action
            android:id="@+id/action_navigation_teams_to_adding_team"
            app:destination="@id/adding_team" />
        <action
            android:id="@+id/action_navigation_teams_to_editing_team"
            app:destination="@id/editing_team" />
    </fragment>

    <fragment
        android:id="@+id/navigation_referees"
        android:name="ru.mivlgu.pin.volleyballreferee.ui.menu.RefereesFragment"
        android:label="@string/title_referees"
        tools:layout="@layout/fragment_referees">
        <action
            android:id="@+id/action_navigation_referees_to_adding_referee"
            app:destination="@id/adding_referee" />
        <action
            android:id="@+id/action_navigation_referees_to_editing_referee"
            app:destination="@id/editing_referee" />
    </fragment>

    <fragment
        android:id="@+id/navigation_players"
        android:name="ru.mivlgu.pin.volleyballreferee.ui.menu.PlayersFragment"
        android:label="@string/title_players"
        tools:layout="@layout/fragment_players">
        <action
            android:id="@+id/action_navigation_players_to_adding_player"
            app:destination="@id/adding_player" />
        <action
            android:id="@+id/action_navigation_players_to_editing_player"
            app:destination="@id/editing_player" />
    </fragment>

    <fragment
        android:id="@+id/navigation_match"
        android:name="ru.mivlgu.pin.volleyballreferee.ui.menu.MatchFragment"
        android:label="@string/title_match"
        tools:layout="@layout/fragment_match">
        <action
            android:id="@+id/action_navigation_match_to_progress_match"
            app:destination="@id/progress_match" />
    </fragment>

    <fragment
        android:id="@+id/navigation_matches"
        android:name="ru.mivlgu.pin.volleyballreferee.ui.menu.MatchesFragment"
        android:label="@string/title_matches"
        tools:layout="@layout/fragment_matches">
    </fragment>

    <fragment
        android:id="@+id/progress_match"
        android:name="ru.mivlgu.pin.volleyballreferee.ui.match.ProgressMatchFragment"
        android:label="@string/title_match"
        tools:layout="@layout/fragment_match">
    </fragment>

    <fragment
        android:id="@+id/adding_team"
        android:name="ru.mivlgu.pin.volleyballreferee.ui.team.AddingTeamFragment"
        android:label="Добавление новой команды"
        tools:layout="@layout/fragment_teams" />

    <fragment
        android:id="@+id/adding_referee"
        android:name="ru.mivlgu.pin.volleyballreferee.ui.referee.AddingRefereeFragment"
        android:label="Добавление нового судьи"
        tools:layout="@layout/fragment_referees" />

    <fragment
        android:id="@+id/editing_referee"
        android:name="ru.mivlgu.pin.volleyballreferee.ui.referee.EditingRefereeFragment"
        android:label="Судья"
        tools:layout="@layout/fragment_referees" />

    <fragment
        android:id="@+id/editing_team"
        android:name="ru.mivlgu.pin.volleyballreferee.ui.team.EditingTeamFragment"
        android:label="Команда"
        tools:layout="@layout/fragment_teams" />

    <fragment
        android:id="@+id/adding_player"
        android:name="ru.mivlgu.pin.volleyballreferee.ui.player.AddingPlayerFragment"
        android:label="Добавление нового игрока"
        tools:layout="@layout/fragment_players" />

    <fragment
        android:id="@+id/editing_player"
        android:name="ru.mivlgu.pin.volleyballreferee.ui.player.EditingPlayerFragment"
        android:label="Игрок"
        tools:layout="@layout/fragment_players" />

    <fragment
        android:id="@+id/details_match"
        android:name="ru.mivlgu.pin.volleyballreferee.ui.match.DetailsMatchFragment"
        android:label="Игрок"
        tools:layout="@layout/fragment_players" />
</navigation>